Made the Home page title responsive with proper spacing and fix the  Movie-Card layout when with empty image.

--- a/src/css/Home.css
+++ b/src/css/Home.css
@@ -5,7 +5,7 @@
 }
 
 .home-page h2 {
-  margin: -2rem 0 1rem;
+  margin: 1rem 0 1rem;
   text-align: center;
   font-size: 2.5rem;
   color: #ffffff;
@@ -53,7 +53,6 @@
 .search-button:hover {
   background-color: #f40612;
 }
-
 
 @media (max-width: 639px) {
   .home-page {
